--- a/source/index.html
+++ b/source/index.html
@@ -177,7 +177,7 @@
         </strong>
       </p>
       <a class="about__show-all-button button button--show-all link-reset" href="form.html">
-        <span class="button__text-mobile">Показать все</span><span class="button__text-desktop">Подробнее</span>
+        <span class="button__text-mobile">Показать все</span><span class="button__text-tablet">Подробнее</span>
         <svg class="button__arrow-icon" xmlns="http://www.w3.org/2000/svg" width="11" height="12" fill="currentColor">
           <path d="M10.0698 6.07495L.157238 11.7041V.445786L10.0698 6.07495z" />
         </svg>
@@ -342,7 +342,7 @@
                 </li>
               </ul>
               <ul class="transport-list list-reset">
-                <li class="transport-list__item transport-list__item--active">
+                <li class="transport-list__item transport-list__item--index transport-list__item--active">
                   <input class="transport-list__checkbox visually-hidden" id="plane-checkbox" type="checkbox"
                     name="transport" value="Самолет" checked disabled>
                   <label class="transport-list__label" for="plane-checkbox" aria-label="Самолет">
@@ -361,7 +361,7 @@
                     </svg>
                   </label>
                 </li>
-                <li class="transport-list__item transport-list__item--active">
+                <li class="transport-list__item transport-list__item--index transport-list__item--active">
                   <input class="transport-list__checkbox visually-hidden" id="bus-checkbox" type="checkbox" name="transport"
                     value="Автобус" disabled>
                   <label class="transport-list__label" for="bus-checkbox" aria-label="Автобус">
@@ -372,7 +372,7 @@
                     </svg>
                   </label>
                 </li>
-                <li class="transport-list__item transport-list__item">
+                <li class="transport-list__item transport-list__item--index transport-list__item">
                   <input class="transport-list__checkbox visually-hidden" id="bicycle-checkbox" type="checkbox"
                     name="transport" value="Велосипед" disabled>
                   <label class="transport-list__label" for="bicycle-checkbox" aria-label="Велосипед">
@@ -386,7 +386,7 @@
                     </svg>
                   </label>
                 </li>
-                <li class="transport-list__item transport-list__item--active">
+                <li class="transport-list__item transport-list__item--index transport-list__item--active">
                   <input class="transport-list__checkbox visually-hidden" id="run-checkbox" type="checkbox" name="transport"
                     value="Бег" disabled>
                   <label class="transport-list__label" for="run-checkbox" aria-label="Бег">
@@ -445,7 +445,7 @@
                 </li>
               </ul>
               <ul class="transport-list list-reset">
-                <li class="transport-list__item transport-list__item--active">
+                <li class="transport-list__item transport-list__item--index transport-list__item--active">
                   <input class="transport-list__checkbox visually-hidden" id="plane-checkbox" type="checkbox"
                     name="transport" value="Самолет" checked disabled>
                   <label class="transport-list__label" for="plane-checkbox" aria-label="Самолет">
@@ -464,7 +464,7 @@
                     </svg>
                   </label>
                 </li>
-                <li class="transport-list__item transport-list__item--active">
+                <li class="transport-list__item transport-list__item--index transport-list__item--active">
                   <input class="transport-list__checkbox visually-hidden" id="bus-checkbox" type="checkbox" name="transport"
                     value="Автобус" checked disabled>
                   <label class="transport-list__label" for="bus-checkbox" aria-label="Автобус">
@@ -475,7 +475,7 @@
                     </svg>
                   </label>
                 </li>
-                <li class="transport-list__item transport-list__item">
+                <li class="transport-list__item transport-list__item--index transport-list__item">
                   <input class="transport-list__checkbox visually-hidden" id="bicycle-checkbox" type="checkbox"
                     name="transport" value="Велосипед">
                   <label class="transport-list__label" for="bicycle-checkbox" aria-label="Велосипед">
@@ -489,7 +489,7 @@
                     </svg>
                   </label>
                 </li>
-                <li class="transport-list__item transport-list__item--active">
+                <li class="transport-list__item transport-list__item--index transport-list__item--active">
                   <input class="transport-list__checkbox visually-hidden" id="run-checkbox" type="checkbox" name="transport"
                     value="Бег" checked disabled>
                   <label class="transport-list__label" for="run-checkbox" aria-label="Бег">
