Исправил ошибки после валидации

--- a/source/form.html
+++ b/source/form.html
@@ -578,7 +578,7 @@
           <div class="planner__buttons">
             <a class="button button--next-step link-reset" href="#step-3">
               <span>Следующий шаг</span>
-              <svg class="hide-on-mobile" class="button__arrow-icon button-arrow-icon--hide-on-mobile"
+              <svg class="button__arrow-icon hide-on-mobile"
                 xmlns="http://www.w3.org/2000/svg" width="11" height="12" fill="currentColor">
                 <path d="M10.0698 6.07495L.157238 11.7041V.445786L10.0698 6.07495z" />
               </svg>
@@ -595,11 +595,11 @@
               <button class="button button--close button--close-alphabet" type="button" aria-label="Закрыть">
                 <svg class="alphabet__icon" viewBox="0 0 9 10" width="9" height="10" fill="currentColor"
                   xmlns="http://www.w3.org/2000/svg">
-                  <g clip-path="url(#clip0)" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
+                  <g clip-path="url(#clip01)" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M7.875 1.806l-6.75 6.188M1.125 1.806l6.75 6.188" />
                   </g>
                   <defs>
-                    <clipPath id="clip0">
+                    <clipPath id="clip01">
                       <path fill="currentColor" transform="rotate(-90 4.512 4.512)" d="M0 0h8.25v9H0z" />
                     </clipPath>
                   </defs>
@@ -742,7 +742,7 @@
           <div class="planner__buttons">
             <button class="button button--next-step link-reset" type="submit">
               <span>Отправить</span>
-              <svg class="hide-on-mobile" class="button__arrow-icon button-arrow-icon--hide-on-mobile"
+              <svg class="button__arrow-icon hide-on-mobile"
                 xmlns="http://www.w3.org/2000/svg" width="11" height="12" fill="currentColor">
                 <path d="M10.0698 6.07495L.157238 11.7041V.445786L10.0698 6.07495z" />
               </svg>
@@ -752,7 +752,7 @@
                 xmlns="http://www.w3.org/2000/svg" width="11" height="12" fill="currentColor">
                 <path d="M10.0698 6.07495L.157238 11.7041V.445786L10.0698 6.07495z" />
               </svg>
-              <span>На шаг назад</span></a>
+              <span>На шаг назад</span>
             </a>
           </div>
         </fieldset>
