--- a/source/form.html
+++ b/source/form.html
@@ -559,6 +559,7 @@
             <div class="planner__country planner__country--choose-country">
               <button class="planner__destination-name planner__open-countries-list" type="button">Выберите страну
                 <img src="img/arrow-down.svg" alt="Дропдаун" width="12" height="16"></button>
+                <div class="planner__icon planner__icon--empty">
               <button class="button button--close button--close-flag" type="button">
                 <svg class="planner__close-icon" viewBox="0 0 9 9" width="9" height="9" fill="currentColor"
                   xmlns="http://www.w3.org/2000/svg">
@@ -566,6 +567,7 @@
                     stroke-linejoin="round" />
                 </svg>
               </button>
+            </div>
             </div>
           </div>
           <div class="planner__countries planner__countries--add-country">
