Поправил отображение иконки пользователя в карточке

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -781,7 +781,7 @@
               <picture class="user-card__image">
                 <source srcset="img/users/demin-desktop.png" media="(min-width: 1440px)">
                 <source srcset="img/users/demin-tablet.png" media="(min-width: 768px)">
-                <img src="img/users/demin-mobile.png" alt="Петя Демин">
+                <img class="user-card__image" src="img/users/demin-mobile.png" alt="Петя Демин">
               </picture>
               <div class="user-card__likes user-card__likes--catalog">
                 <div class="user-card__like-container user-card__like-container--catalog">
@@ -910,7 +910,7 @@
               <picture class="user-card__image">
                 <source srcset="img/users/smolov-desktop.png" media="(min-width: 1440px)">
                 <source srcset="img/users/smolov-tablet.png" media="(min-width: 768px)">
-                <img src="img/users/smolov-mobile.png" alt="Марк Смолов">
+                <img class="user-card__image" src="img/users/smolov-mobile.png" alt="Марк Смолов">
               </picture>
               <div class="user-card__likes user-card__likes--catalog">
                 <div class="user-card__like-container user-card__like-container--catalog">
@@ -1047,7 +1047,7 @@
               <picture class="user-card__image">
                 <source srcset="img/users/rogovaya-desktop.png" media="(min-width: 1440px)">
                 <source srcset="img/users/rogovaya-tablet.png" media="(min-width: 768px)">
-                <img src="img/users/rogovaya-mobile.png" alt="Лариса Роговая">
+                <img class="user-card__image" src="img/users/rogovaya-mobile.png" alt="Лариса Роговая">
               </picture>
               <div class="user-card__likes user-card__likes--catalog">
                 <div class="user-card__like-container user-card__like-container--catalog">
