Сделал ссылками элементы в списке continents-list и добавил им интерактивности

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -126,10 +126,10 @@
 
       <div class="continents continents--catalog">
         <ul class="continents__list list-reset">
-          <li class="continents__item continents__item--active">Европа</li>
-          <li class="continents__item">Азия</li>
-          <li class="continents__item">Америка</li>
-          <li class="continents__item">Острова</li>
+          <li class="continents__item"><a class="continents__link continents__link--active link-reset" href="#">Европа</a></li>
+          <li class="continents__item"><a class="continents__link link-reset" href="#">Азия</a></li>
+          <li class="continents__item"><a class="continents__link link-reset" href="#">Америка</a></li>
+          <li class="continents__item"><a class="continents__link link-reset" href="#">Острова</a></li>
         </ul>
       </div>
       <div class="alphabet alphabet--catalog">
