Исправил название класса для фильтра по уровню и добавил интерактивности

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -610,20 +610,20 @@
             <div class="level-filter">
               <div class="level-filter__level-controls">
                 <label class="level-filter__label" aria-label="Минимальный уровень">
-                  <input class="level-filter__input" type="number" name="min" id="min-level" value="30" min="0"
+                  <input class="level-filter__input level-filter__input--min-level" type="number" name="min" id="min-level" value="30" min="0"
                     max="100">
                 </label>
                 <span class="level-filter__separator"></span>
                 <label class="level-filter__label" aria-label="Максимальный уровень">
-                  <input class="level-filter__input" type="number" name="max" id="max-level" value="100" min="0"
+                  <input class="level-filter__input level-filter__input--max-level" type="number" name="max" id="max-level" value="100" min="0"
                     max="100">
                 </label>
               </div>
               <div class="level-filter__range-controls">
                 <div class="level-filter__scale">
                   <div class="level-filter__bar"></div>
-                  <div class="level-filter__toggle level-filter__toggle--min" tabindex="0"></div>
-                  <div class="level-filter__toggle level-filter__toggle--max" tabindex="0"></div>
+                  <div class="level-filter__handle level-filter__handle--min" tabindex="0"></div>
+                  <div class="level-filter__handle level-filter__handle--max" tabindex="0"></div>
                 </div>
               </div>
             </div>
