Удалил лишний заголовок

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -467,11 +467,10 @@
     </div>
     <div class="wrapper">
       <section class="companion-selection">
-        <h2 class="visually-hidden">Форма поиска попутчика</h2>
         <form class="companion-selection__form" action="https://echo.htmlacademy.ru" method="post">
-          <h3 class="companion-selection__title">
+          <h2 class="companion-selection__title">
             Подберите идеального попутчика
-          </h3>
+          </h2>
           <fieldset class="companion-selection__filter">
             <button class="companion-selection__button button-reset" type="button">Хобби<span
                 class="hide-on-mobile">:</span></button>
@@ -1184,7 +1183,7 @@
           </ul>
           <ul class="filtered__button-list list-reset">
             <li class="filtered__button filtered__button--previous">
-              <a class="link-reset" href="#" title="Предыдущий">
+              <a class="filtered__link filtered__link--arrow link-reset" href="#" title="Предыдущий">
                 <svg class="filtered__icon-show-more-arrow" viewBox="0 0 10 18" width="10" height="18"
                   fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                   <path d="M0 9L9.75.34v17.32L0 9z" fill="currentColor" />
@@ -1192,7 +1191,7 @@
               </a>
             </li>
             <li class="filtered__button filtered__button--next">
-              <a class="link-reset" href="#" title="Следующий">
+              <a class="filtered__link filtered__link--arrow link-reset" href="#" title="Следующий">
                 <svg class="filtered__icon-show-more-arrow filtered__icon-show-more-arrow--reflect" viewBox="0 0 10 18"
                   width="10" height="18" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                   <path d="M0 9L9.75.34v17.32L0 9z" fill="currentColor" />
