Добавил недостающий href для ссылки с логотипом в футере

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1205,7 +1205,7 @@
   </main>
   <footer class="page-footer page-footer--directions">
     <div class="page-footer__content">
-      <a class="link-reset">
+      <a href="index.html" class="link-reset">
         <picture>
           <source srcset="img/logos/logo-blue-desktop.png" media="(min-width: 1440px)">
           <source srcset="img/logos/logo-blue-tablet.png" media="(min-width: 768px)">
