--- a/source/form.html
+++ b/source/form.html
@@ -770,7 +770,7 @@
     </section>
     <footer class="page-footer page-footer--directions">
       <div class="page-footer__content">
-        <a class="link-reset">
+        <a href="index.html" class="link-reset">
           <picture>
             <source srcset="img/logos/logo-blue-desktop.png" media="(min-width: 1440px)">
             <source srcset="img/logos/logo-blue-tablet.png" media="(min-width: 768px)">
