Переделал индикатор онлайна

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -666,6 +666,9 @@
                 <span class="user-card__likes-quantity user-card__likes-quantity--catalog">1,5 М</span>
               </div>
               <a class="user-card__user-name user-card__user-name--offline user-card__user-name--catalog link-reset" href="#">Таня Фирсова
+                <span class="user-card__user-status user-card__user-status--offline">
+                  <span class="visually-hidden">Оффлайн</span>
+                </span>
               </a>
 
               <ul class="tag-list tag-list--catalog list-reset">
@@ -811,8 +814,11 @@
                 </div>
                 <span class="user-card__likes-quantity user-card__likes-quantity--catalog">1500</span>
               </div>
-              <a class="user-card__user-name user-card__user-name--offline user-card__user-name--catalog link-reset" href="#">Петя Демин</a>
-
+              <a class="user-card__user-name user-card__user-name--offline user-card__user-name--catalog link-reset" href="#">Петя Демин
+                <span class="user-card__user-status user-card__user-status--offline">
+                  <span class="visually-hidden">Оффлайн</span>
+                </span>
+              </a>
               <ul class="tag-list tag-list--catalog list-reset">
                 <li class="tag-list__item">
                   #бургер
@@ -947,8 +953,10 @@
                 <span class="user-card__likes-quantity user-card__likes-quantity--catalog">170</span>
               </div>
               <a class="user-card__user-name user-card__user-name--offline user-card__user-name--catalog link-reset" href="#">Марк Смолов
+                <span class="user-card__user-status user-card__user-status--offline">
+                  <span class="visually-hidden">Оффлайн</span>
+                </span>
               </a>
-
               <ul class="tag-list tag-list--catalog list-reset">
                 <li class="tag-list__item">
                   #рэп
@@ -1090,6 +1098,9 @@
                 <span class="user-card__likes-quantity user-card__likes-quantity--catalog">23</span>
               </div>
               <a class="user-card__user-name user-card__user-name--online user-card__user-name--catalog link-reset" href="#">Лариса Роговая
+                <span class="user-card__user-status user-card__user-status--online">
+                  <span class="visually-hidden">Онлайн</span>
+                </span>
               </a>
               <ul class="tag-list tag-list--catalog list-reset">
                 <li class="tag-list__item">
