Поправил PixelPerfect для мобильной версии страницы каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -819,7 +819,7 @@
                   <span class="visually-hidden">Оффлайн</span>
                 </span>
               </a>
-              <ul class="tag-list tag-list--catalog list-reset">
+              <ul class="tag-list tag-list--catalog tag-list--bigger-padding list-reset">
                 <li class="tag-list__item">
                   #бургер
                 </li>
@@ -841,7 +841,7 @@
                 <span class="user-card__text user-card__text--catalog user-card__text--catalog-left">хочет
                   посетить:</span>
               </p>
-              <ul class="flag-list flag-list--catalog list-reset">
+              <ul class="flag-list flag-list--catalog flag-list--two-flags list-reset">
                 <li class="flag-list__item flag-list__item--companions-filtered">
                   <picture class="flag-list__img">
                     <source srcset="img/flags/flag-belgium-35-24.png" media="(min-width: 767px)">
@@ -1121,7 +1121,7 @@
                 <span class="user-card__text user-card__text--catalog user-card__text--catalog-left">хочет
                   посетить:</span>
               </p>
-              <ul class="flag-list flag-list--catalog list-reset">
+              <ul class="flag-list flag-list--catalog flag-list--two-flags list-reset">
                 <li class="flag-list__item flag-list__item--companions-filtered">
                   <picture class="flag-list__img">
                     <source srcset="img/flags/flag-united-kingdom-35-24.png" media="(min-width: 767px)">
